[tool.poetry]
name = "formify-api"
version = "0.1.0"
description = ""
authors = ["voikin <woysen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = { extras = ["asyncpg"], version = "^2.0.27" }
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"
email-validator = "^2.1.0.post1"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
bcrypt = "^4.1.2"
pylint = "^3.0.3"
alembic = "^1.13.1"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
